Added socialNavBar.css and added 'socNavBar' class to socialNavBar.html's 'nav class'

--- a/LivingWater/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.html
+++ b/LivingWater/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.html
@@ -2,7 +2,7 @@
     <!--Do Syncing from facebook here-->
     <div class="row margin-custom">
         <div class="col-xs-4">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default socNavBar">
                 <!--<div class="btn-group">-->
                     <button type="button" class="btn facebook">Facebook
                         <!--<span>Facebook</span>
