Added link in socialNavBar.html to socialNavBar.css

--- a/LivingWater/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.html
+++ b/LivingWater/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.html
@@ -1,7 +1,9 @@
 ﻿<div>
+    <link rel="stylesheet" type="text/css" href="/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.css" />
     <!--Do Syncing from facebook here-->
     <div class="row margin-custom">
         <div class="col-xs-4">
+            <h6>Like Us On Facebook and Give Us a +1 On Google+</h6>
             <nav class="navbar navbar-default socNavBar">
                 <!--<div class="btn-group">-->
                     <button type="button" class="btn facebook">Facebook
