Lots of changes revolving around the socialNavBar

--- a/LivingWater/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.html
+++ b/LivingWater/Assets/js/directives/template1/ui/socialNavBar/socialNavBar.html
@@ -6,14 +6,14 @@
             <h6>Like Us On Facebook and Give Us a +1 On Google+</h6>
             <nav class="navbar navbar-default socNavBar">
                 <!--<div class="btn-group">-->
-                    <button type="button" class="btn facebook">Facebook
+                    <button type="button" class="btn facebook roundborders socNavBtn-size">
                         <!--<span>Facebook</span>
                         <img alt="Facebook" src="/Assets/images/FB-fLogo-Blue-broadcast.png" width="40" height="40" border="0" />-->
                     </button>
                 <!--</div>-->
 
                 
-                    <button type="button" class="btn google">Google
+                    <button type="button" class="btn google roundborders socNavBtn-size">
                         <!--<span>Google</span>
                         <img alt="Facebook" src="/Assets/resources/FB-fLogo-Blue-broadcast.png" width="40" height="40" border="0" />
                             <button class="facebook" ><i class="fa fa-facebook fa-2x"></i>facebook</button> 
