--- a/LivingWater/Assets/js/directives/template1/ui/loginComponent/loginComponent.html
+++ b/LivingWater/Assets/js/directives/template1/ui/loginComponent/loginComponent.html
@@ -1,15 +1,16 @@
 ﻿<div>
+    <link rel=" stylesheet" type="text/css" href="/Assets/js/directives/template1/ui/loginComponent/loginComponent.css" />
     <div class="row margin-custom">
         <div class="col-xs-4">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-default whiteOpacity noBorders">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Username" ng-model="username" />
+                    <input type="text" class="form-control loginSpacing" placeholder="Username" ng-model="username" />
                 </div>
 
                 <div class="form-group">
                     <input type="password" class="form-control" placeholder="Password" ng-model="password" /><br />
                 </div>
-                    <input type="button" class="btn btn-md btn-hover btn-info btn-block active" value="LOGIN" ng-click="login()" />
+                    <input type="button" class="btn btn-md btn-hover btn-info btn-block active loginSpacing" value="LOGIN" ng-click="login()" />
             </nav>
             
          </div>
