contactUs.html to contactUs.css

--- a/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
+++ b/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
@@ -1,8 +1,9 @@
 ﻿<div class="bg2">
+    <link rel="stylesheet" type="text/css" href="contactUs.css" />
         <table>
             <tr>
                 <td>
-                    <h3 class="contactTexts fontFranklinGothicMedium" ng-bind="data.head"></h3>
+                    <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.head"></h3>
                 </td>
             </tr>
             <tr>
@@ -13,7 +14,7 @@
                                 <table>
                                     <tr>
                                         <td style="padding-right:20px">
-                                            <h3 class="contactTexts fontFranklinGothicMedium" ng-bind="data.email"></h3>
+                                            <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.email"></h3>
                                         </td>
                                         <td>
                                             <img style="width:100px; height:100px" src="/Assets/images/icons/ic1.png" />
@@ -21,7 +22,7 @@
                                     </tr>
                                     <tr>
                                         <td style="padding-right:20px">
-                                            <h3 class="contactTexts fontFranklinGothicMedium" ng-bind="data.cell"></h3>
+                                            <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.cell"></h3>
                                         </td>
                                         <td>
                                             <img class="contactTexts fontFranklinGothicMedium" style="width:100px; height:100px" src="/Assets/images/icons/ic2.png" />
@@ -29,7 +30,7 @@
                                     </tr>
                                     <tr>
                                         <td style="padding-right:20px">
-                                            <h3 class="contactTexts fontFranklinGothicMedium" ng-bind="data.telnumber"></h3>
+                                            <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.telnumber"></h3>
                                         </td>
                                         <td>
                                             <img style="width:100px; height:100px" src="/Assets/images/icons/ic3.png" />
