--- a/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
+++ b/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
@@ -3,7 +3,7 @@
         <table>
             <tr>
                 <td>
-                    <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.head"></h3>
+                    <h3 class="blackFont contactTexts fontFranklinGothicMedium " ng-bind="data.head"></h3>
                 </td>
             </tr>
             <tr>
