added functionality to news

--- a/LivingWater/Assets/js/directives/template1/house/viewNews/viewNews.html
+++ b/LivingWater/Assets/js/directives/template1/house/viewNews/viewNews.html
@@ -9,7 +9,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <h2 >Date Published <span ng-bind="datePublished" ></span></h2>
+                        <p>Date Published <span ng-bind="datePublished" ></span></p>
                     </td>
                 </tr>
                 <tr>
