--- a/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
@@ -6,25 +6,25 @@
                 <table>
                     <tr>
                         <td>
-                            <div>
-                                <div style="float:left; position:absolute; margin-left:10px; margin-top:280px; z-index:1;">
-                                    <a ng-click="ShowNewsInformation()">
-                                        <table>
+                            <a ng-click="ShowNewsInformation()">
+                                <div>
+                                    <div style="float:left; position:absolute; margin-top:280px; z-index:1; background-color:white; opacity:0.7; width:1000px;">
+                                        <table style="margin-left:10px;">
                                             <tr>
-                                                <td>
+                                                <td style="text-emphasis-style:circle;">
                                                     <h1 ng-bind="title"></h1>
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td>
+                                                <td  style="text-emphasis-style:circle;">
                                                     <p ng-bind="content | limitTo:30"></p>
                                                 </td>
                                             </tr>
                                         </table>
-                                    </a>
+                                    </div>
+                                    <img src="{{displayImage}}" style="width:1000px; height:400px" />
                                 </div>
-                                <img src="{{displayImage}}" style="width:1000px; height:400px" />
-                            </div>
+                            </a>
                         </td>
                     </tr>
                     <tr style="margin-top:50px;">
