made some changes

--- a/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
+++ b/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
@@ -1,6 +1,6 @@
 ﻿<div class="bg2">
     <link rel="stylesheet" type="text/css" href="contactUs.css" />
-        <table>
+        <table style="margin-bottom:50px;">
             <tr>
                 <td>
                     <h3 class="blackFont contactTexts fontFranklinGothicMedium " ng-bind="data.head"></h3>
@@ -43,6 +43,7 @@
                 </td>
             </tr>
         </table>
-        <concern-component></concern-component>
+
+        <concern-component ></concern-component>
 
 </div>
