--- a/LivingWater/Assets/js/directives/template1/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template1/ui/navigationBar/navigationBar.html
@@ -4,8 +4,8 @@
         <ul class="nav nav-tabs gradientBg">
             <!--<ul class="nav nav-pills nav-justified">-->
             <!---if home ang gipindot, dapat siya lang active. add class="active" sa li--->
-            <li role="presentation" ng-repeat="item in items" ng-click="goto()" ng-show="{{item.show}}">
-                <button class="fontFranklinGothicMedium gradientBg padding5px hideBorder blackFont buttonSize ">{{item.label}}</button>
+            <li role="presentation" ng-repeat="item in items" ng-click="goto()" ng-show="{{item.show}}" style="margin-right:10px;">
+                <button class="fontFranklinGothicMedium gradientBg padding5px hideBorder blackFont buttonSize" >{{item.label}}</button>
             </li>
         </ul>
     </div>
