--- a/LivingWater/Assets/js/directives/template1/house/products/products.html
+++ b/LivingWater/Assets/js/directives/template1/house/products/products.html
@@ -5,19 +5,18 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="button" value="Products" ng-click="SwitchMode('product')" ng-disabled="showProd" />
+                            <input type="button" value="Products" ng-click="SwitchMode('product')" ng-disabled="showProd" style="width:100px; height:50px;" />
                         </td>
                         <td>
-                            <input type="button" value="Cart" ng-click="SwitchMode('cart')" ng-disabled="showCart" />
+                            <input type="button" value="Cart" ng-click="SwitchMode('cart')" ng-disabled="showCart" style="width:100px; height:50px;"/>
                         </td>
                         <td>
-                            <select  ng-model="selectedFilter" ng-change="ChangeFilter($index)">
+                            <select  ng-model="selectedFilter" ng-change="ChangeFilter($index)" style="width:150px; height:50px;">
                                 <option ng-repeat="genre in filters" value="{{genre.id}}">{{genre.name}}</option>
                             </select>
                         </td>
                     </tr>
                 </table>
-
                 <table>
                     <tr ng-if="showProd">
                         <td>
