--- a/LivingWater/Assets/js/directives/template1/house/aboutUs/AboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/house/aboutUs/AboutUs.html
@@ -1,7 +1,21 @@
 ﻿<div class="AboutUs">
     <center>
-        <h1>About Us</h1>
-        <d-about-us></d-about-us>
+        <table class="displayMargin100px tableWidth1000px" >
+            <tr>
+                <td>
+                    <center>
+                        <h1>About Us</h1>
+                    </center>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <center>
+                        <d-about-us></d-about-us>
+                    </center>
+                </td>
+            </tr>
+        </table>
     </center>
 </div>
 
