--- a/LivingWater/Assets/js/directives/template1/house/contactUs/ContactUs.html
+++ b/LivingWater/Assets/js/directives/template1/house/contactUs/ContactUs.html
@@ -1,5 +1,5 @@
 ﻿<div class="" ng-controller="ContactUsCtrl">
-        <center>
+        <center class="displayMargin100px">
             <div ng-repeat="obj in data">
                 <contact-us-body data="obj"></contact-us-body>
             </div>
