--- a/LivingWater/Assets/js/directives/template1/house/aboutUs/AboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/house/aboutUs/AboutUs.html
@@ -1,6 +1,6 @@
 ﻿<div class="AboutUs">
     <center>
-        <table class="displayMargin100px tableWidth1000px" >
+        <table >
             <tr>
                 <td>
                     <center>
