--- a/LivingWater/Assets/js/directives/template1/house/products/products.html
+++ b/LivingWater/Assets/js/directives/template1/house/products/products.html
@@ -2,7 +2,7 @@
     <div>
         <center>
             <div ng-controller="productsCtrl">
-                <table class="displayMargin100px">
+                <table >
                     <tr>
                         <td>
                             <input type="button" value="Products" ng-click="SwitchMode('product')" ng-disabled="showProd" style="width:100px; height:50px;" />
