added top stories

--- a/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
@@ -52,6 +52,7 @@
         <tr>
             <td>
                 <!--Here is where i will put top stories-->
+                <news-preview></news-preview>
             </td>
             <td>
                 <!--Here Is Where i will put -->
