--- a/LivingWater/Assets/js/directives/template1/ui/adminDashboard/inboxSection/inboxSection.html
+++ b/LivingWater/Assets/js/directives/template1/ui/adminDashboard/inboxSection/inboxSection.html
@@ -7,15 +7,19 @@
                     <table style="overflow-y:scroll; display:block; height:300px; width:200px">
                         <tr ng-repeat="item in items">
                             <td>
-                                <button ng-click="showInformation(item)">{{item.user}}</button>
-
+                                <a ng-click="showInformation(item)">
+                                    <div style="width:200px; height:50px; background-color:yellow" ng-init="CheckIfUnread(item)">
+                                        <p ng-bind="item.sender_username"></p>
+                                        <p ng-bind="{{(item.unreadcount == 0) ? "" : item.unreadcount}}"></p>
+                                    </div>
+                                </a>
                             </td>
                         </tr>
                     </table>
                 </td>
                 <td>
                     <div>
-                        <inbox-message content="content"></inbox-message>
+                        <inbox-message content="content" username="username" subject="subject"></inbox-message>
                     </div>
                 </td>
             </tr>
