--- a/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
@@ -34,7 +34,7 @@
                     </tr>
                     <tr style="margin-top:50px;">
                         <td>
-                            <table style="overflow-y:scroll; display:block;  height:150px; width:1000px;" >
+                            <table style="overflow-x:scroll; display:block;  height:150px; width:1000px;" >
                                 <tr>
                                     <td ng-repeat="new in news" style="padding-right:10px">
                                         <a ng-click="ChangeDisplayNews(new)">
