--- a/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsPreview/newsPreview.html
+++ b/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsPreview/newsPreview.html
@@ -7,11 +7,10 @@
                 </div>
             </td>
         </tr>
-
         <tr ng-repeat="new in news">
             <td>
                 <div style="background-color:yellow; width:400px; height:70px; margin-bottom:10px">
-                    <a ng-click="ShowNewsInformation(new)">
+                    <a ng-click="ShowNewsInformationPreview(new)">
                         <table>
                             <tr>
                                 <td>
