--- a/LivingWater/Assets/js/directives/template1/house/viewNews/viewNews.html
+++ b/LivingWater/Assets/js/directives/template1/house/viewNews/viewNews.html
@@ -14,7 +14,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <table style="margin-top: 100px; margin-bottom:50px; width: 400px; ">
+                        <table style="word-break:break-word; margin-top: 100px; margin-bottom:50px; width: 1000px; ">
                             <tr>
                                 <td>
                                     <p ng-bind="content"></p>
