--- a/LivingWater/Assets/js/directives/template1/ui/adminDashboard/inboxMessage/inboxMessage.html
+++ b/LivingWater/Assets/js/directives/template1/ui/adminDashboard/inboxMessage/inboxMessage.html
@@ -1,13 +1,13 @@
 ﻿<div>
-    <table style="width:600px; height:300px">
+    <table>
         <tr>
             <td>
-                <h5>From: <span ng-bind="username"></span></h5>
+                <h5 ng-if="username!=''">FROM: <span ng-bind="username"></span></h5>
             </td>
         </tr>
         <tr>
             <td>
-                <h6>Subject: <span ng-bind="subject"></span></h6>
+                <h6 ng-if="subject != ''">Subject: <span ng-bind="subject"></span></h6>
             </td>
         </tr>
         <tr ng-repeat="itm in content">
@@ -15,7 +15,7 @@
                 <table>
                     <tr>
                         <td>
-                            <div style="width:600px;">
+                            <div style="word-break:break-word; width:380px; background-color:yellow;">
                                 <p ng-bind="itm.message"></p>
                             </div>
                         </td>
