edited aboutUs html @ house,ui

--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -1,15 +1,53 @@
 ﻿<div>
 
     <link rel="stylesheet" type="text/css" href="/Assets/js/directives/template1/ui/aboutUs/css/aboutUs.css" />
-    <h1 style="text-align:initial">Company Background</h1>
-    <table>
+
+    <h1 style="text-align:initial">Livingwater System Incorporated</h1>
+
+    <img src="/Assets/images/etc/img1.jpg" class="auImg img-circle" />
+    
+    <table style="width:700px">
+        <tr>
+            <td>Company Background</td>
+        </tr>
         <tr>
             <td>
-                    <img src="/Assets/images/etc/img1.jpg" class="auImg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat. 
+                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium. 
+                Donec condimentum vehicula urna, quis condimentum quam venenatis a. Aliquam erat volutpat. </p>
+            </td>
+        </tr>
+        <tr>
+            <td style="padding-right:50px; align-content:center">
+                <h1>Vision</h1>
+            </td>
+         </tr>
+        <tr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat. 
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium. 
+            Donec condimentum vehicula urna, quis condimentum quam venenatis a.</p>
+        </tr> 
+        <tr>  
+            <td style="padding-left:50px; align-content:center">
+                <h1>Mission</h1>
+            </td>
+        </tr>
+        <tr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
+            Donec condimentum vehicula urna, quis condimentum quam venenatis a.</p>
+        </tr> 
+    </table>
+
+
+    <!--<table>
+        <tr>
+            <td>
+                    <img src="/Assets/images/etc/img1.jpg" class="auImg img-circle" />
             </td>
         </tr>
     </table>
-    <p>This Is The Background Of Living Water</p>
+ 
 
     <table style="width:400px; height:50px">
         <tr>
@@ -43,7 +81,7 @@
                 </table>
             </td>
         </tr>
-    </table>
+    </table>-->
 </div>
 
 
