--- a/LivingWater/Assets/js/directives/template1/house/aboutUs/AboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/house/aboutUs/AboutUs.html
@@ -4,7 +4,7 @@
             <tr>
                 <td>
                     <center>
-                        <h1>About Us</h1>
+                        <h1>About Us</h1><br />
                     </center>
                 </td>
             </tr>
