--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -8,7 +8,7 @@
     
 
 
-    <table style="width:700px">
+    <table style="width:700px;word-break:break-word;">
         <tr>
             <td>Company Background</td> 
         </tr>
