break-word on aboutUs

--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -10,7 +10,9 @@
 
     <table style="width:700px;word-break:break-word;">
         <tr>
-            <td>Company Background</td> 
+            <td>
+                <h4>Company Background</h4>
+            </td> 
         </tr>
 
         <tr>
@@ -22,8 +24,8 @@
         </tr>
 
         <tr>
-            <td style="padding-right:50px; align-content:center"> 
-                <h1>Vision</h1>
+            <td> 
+                <h4>Vision</h4>
             </td>
          </tr>
 
@@ -34,8 +36,8 @@
         </tr> 
 
         <tr>  
-            <td style="padding-left:50px; align-content:center">
-                <h1>Mission</h1>
+            <td>
+                <h4>Mission</h4>
             </td>
         </tr>
 
