--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -4,7 +4,7 @@
 
     <h1 style="text-align:initial">Livingwater System Incorporated</h1>
 
-    <img src="/Assets/images/etc/img1.jpg" class="auImg img-circle" />
+    <img src="/Assets/images/etc/img1.jpg" class="auImg" />
     
 
 
