--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -28,9 +28,13 @@
          </tr>
 
         <tr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat. 
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium. 
-            Donec condimentum vehicula urna, quis condimentum quam venenatis a.</p>
+            <td>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
+                    Donec condimentum vehicula urna, quis condimentum quam venenatis a.
+                </p>
+            </td>
         </tr> 
 
         <tr>  
@@ -40,9 +44,13 @@
         </tr>
 
         <tr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
-            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
-            Donec condimentum vehicula urna, quis condimentum quam venenatis a.</p>
+            <td>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
+                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
+                    Donec condimentum vehicula urna, quis condimentum quam venenatis a.
+                </p>
+            </td>
         </tr> 
 
     </table>
