--- a/LivingWater/Assets/js/directives/template1/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template1/ui/navigationBar/navigationBar.html
@@ -9,4 +9,32 @@
             </li>
         </ul>
     </div>
+
+
+    <h2 class="text-xs-center">Bootstrap 4 Change Navbar Breakpoint</h2>
+    <p class="text-xs-center">Use <code>navbar-toggleable-md</code> to toggle the navbar on the medium (md) screens</p>
+    <nav class="navbar navbar-dark bg-primary" id="nav1">
+        <div class="container-fluid">
+            <button class="navbar-toggler hidden-lg-up pull-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar1">
+                ☰
+            </button>
+            <a class="navbar-brand" href="#">Navbar md</a>
+            <div class="collapse navbar-toggleable-md" id="collapsingNavbar1">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav pull-xs-right">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" title="I collapse on `md` screens">About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
 </div>
