reverted changes back to normal, do not uncomment or delete the commented parts for future reference

--- a/LivingWater/Assets/js/directives/template1/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template1/ui/navigationBar/navigationBar.html
@@ -11,9 +11,9 @@
     </div>
 
 
-    <h2 class="text-xs-center">Bootstrap 4 Change Navbar Breakpoint</h2>
+    <!--<h2 class="text-xs-center">Bootstrap 4 Change Navbar Breakpoint</h2>
     <p class="text-xs-center">Use <code>navbar-toggleable-md</code> to toggle the navbar on the medium (md) screens</p>
-    <nav class="navbar navbar-dark bg-primary" id="nav1">
+    <nav class="navbar navbar-dark bg-info" id="nav1">
         <div class="container-fluid">
             <button class="navbar-toggler hidden-lg-up pull-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar1">
                 ☰
@@ -35,6 +35,6 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>-->
 
 </div>
