--- a/LivingWater/Assets/js/directives/template1/house/home/Home.html
+++ b/LivingWater/Assets/js/directives/template1/house/home/Home.html
@@ -4,7 +4,14 @@
             <tr>
                 <td>
                     <h1>Home</h1>
-                    <greeting-component></greeting-component>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <news-preview></news-preview>
+                </td>
+                <td ng-if="isUser">
+                    <inbox-section isadmin="false"></inbox-section>
                 </td>
             </tr>
         </table>
