--- a/LivingWater/Assets/js/directives/template1/house/home/Home.html
+++ b/LivingWater/Assets/js/directives/template1/house/home/Home.html
@@ -1,6 +1,6 @@
 ﻿<div class="Home">
     <center ng-controller="HomeCtrl">
-        <table>
+        <table style="width:1000px;">
             <tr>
                 <td>
                     <h1>Home</h1>
@@ -17,8 +17,4 @@
         </table>
     </center>
 </div>
-
-
-
-
 
