inbox fixes enables delete and changes product content

--- a/LivingWater/Assets/js/directives/template1/ui/adminDashboard/inboxSection/inboxSection.html
+++ b/LivingWater/Assets/js/directives/template1/ui/adminDashboard/inboxSection/inboxSection.html
@@ -11,7 +11,7 @@
                         </select>
                     </td>
                     <td>
-                        <input type="button" value="DELETE" />
+                        <input type="button" value="DELETE" ng-click="DeleteSelected()"/>
                     </td>
                 </tr>
                 <tr>
