--- a/LivingWater/Assets/js/directives/template1/ui/products/productItem/productItem.html
+++ b/LivingWater/Assets/js/directives/template1/ui/products/productItem/productItem.html
@@ -2,7 +2,7 @@
             <table>
                     <tr>
                         <td>
-                            <img src="item.source" />
+                            <img src="{{item.source}}" />
                         </td>
                     </tr>
                     <tr>
