--- a/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
@@ -5,7 +5,7 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="col.source" style="width:200px; height:200px"/>
+                            <img src="{{col.source}}" style="width:200px; height:200px"/>
                         </td>
                     </tr>
                     <tr>
