--- a/LivingWater/Assets/js/directives/template1/house/products/products.html
+++ b/LivingWater/Assets/js/directives/template1/house/products/products.html
@@ -30,6 +30,9 @@
                     </tr>
                 </table>
             </div>
+            <div>
+                <product-modify></product-modify>
+            </div>
         </center>
     </div>
 </div>
