changed navigation bar

--- a/LivingWater/Assets/js/directives/template1/ui/adminDashboard/newsSection/newsSection.html
+++ b/LivingWater/Assets/js/directives/template1/ui/adminDashboard/newsSection/newsSection.html
@@ -14,6 +14,16 @@
             </tr>
             <tr>
                 <td>
+                    <input type="file" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h1>Display Video Modify Here</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <input type="button" value="POST" />
                 </td>
             </tr>
