--- a/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
+++ b/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
@@ -1,4 +1,4 @@
-﻿<div class="bg2">
+﻿<div>
     <link rel="stylesheet" type="text/css" href="contactUs.css" />
         <table style="margin-bottom:50px;">
             <tr>
