--- a/LivingWater/Assets/js/directives/template1/ui/registration/registrationComponent.html
+++ b/LivingWater/Assets/js/directives/template1/ui/registration/registrationComponent.html
@@ -1,4 +1,4 @@
-﻿<div class="bg3">
+﻿<div>
     <div class="row margin-custom">
         <div class="col-xs-4 bg4">
             <nav class="navbar navbar-default divTransparent">
