--- a/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
@@ -10,7 +10,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Brand</a>
+                    <a class="navbar-brand" href="#">Living Water Inc</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -32,7 +32,7 @@
                         <li class="dropdown">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Messages <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Inbox</a></li>
+                                <li><a ng-click="goto('/Inbox')" >Inbox</a></li>
                                 <li><a href="#">Drafts</a></li>
                                 <li><a href="#">Sent Items</a></li>
                                 <li class="divider"></li>
@@ -40,17 +40,30 @@
                             </ul>
                         </li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right" ng-if="isShowAdmin">
                         <li class="dropdown">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Admin <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Manage News</a></li>
                                 <li><a href="#">Manage Products</a></li>
-                                <li class="divider"></li>
                                 <li><a href="#">Settings</a></li>
+                                <li class="divider"></li>
+                                <li><a ng-click="goto('/Login')">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
+                    <ul class="nav navbar-nav navbar-right" ng-if="isShowUser">
+                        <li class="dropdown">
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">User<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Order History</a></li>
+                                <li><a href="#">Manage Products</a></li>
+                                <li class="divider"></li>
+                                <li><a ng-click="goto('/Login')">Logout</a></li>
+                            </ul>
+                        </li>
+                    </ul>    
+
                 </div><!-- /.navbar-collapse -->
             </div>
         </nav>
