--- a/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
@@ -22,7 +22,7 @@
                             <ul class="dropdown-menu">
                                 <li><a ng-click="goto('/Products')">Products</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#">Franchise</a></li>
+                                <li><a ng-click="goto('/Franchise')">Franchise</a></li>
                                 <li class="divider"></li>
                                 <li><a ng-click="goto('/AboutUs')">About Us</a></li>
                                 <li class="divider"></li>
@@ -44,8 +44,8 @@
                         <li class="dropdown">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Admin <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Manage News</a></li>
-                                <li><a href="#">Manage Products</a></li>
+                                <li><a ng-click="goto('/AdminDashboard', 'News')">Manage News</a></li>
+                                <li><a ng-click="goto('/AdminDashboard', 'Products')">Manage Products</a></li>
                                 <li><a href="#">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a ng-click="goto('/Login')">Logout</a></li>
